@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.274 2009/09/07 18:32:05 joerg Exp $
+# $NetBSD: Makefile,v 1.275 2009/09/18 11:26:23 dmcmahill Exp $
 #
 
 COMMENT=	Programming languages
@@ -106,6 +106,7 @@ SUBDIR+=	ocamlduce
 SUBDIR+=	onyx
 SUBDIR+=	oo2c
 SUBDIR+=	opencobol
+SUBDIR+=	openjdk7
 SUBDIR+=	openjdk7-bin
 SUBDIR+=	ossp-js
 SUBDIR+=	p2c
